--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="headings d-flex justify-content-between align-items-center mb-3">
-				<h5>Comments:</h5>
+				<h5>Comments ({{ comments.count }}):</h5>
 
 			</div>
 
