--- a/templates/deals/deal_detail.html
+++ b/templates/deals/deal_detail.html
@@ -26,12 +26,12 @@
 			</div>
 			<div class="col-md-6">
 				<h5>{{ deal.name }}</h5>
-				<p class="mb-2 text-muted text-uppercase small">Shirts</p>
+				<p class="mb-2 text-muted text-uppercase small">Category</p>
 				<p>
 					<span class="mr-1">
 						<strong>{{ deal.current_price }}
-							{% if deal.historical_price %}<s>| {{ deal.historical_price }}</s> |
-								{{ deal.price_percentage }}%  {% endif %}
+							{% if deal.historical_price %}| <s> {{ deal.historical_price }}</s> |
+								{{ deal.price_percentage | floatformat:2 }}%  {% endif %}
 						</strong>
 					</span>
 				</p>
@@ -40,26 +40,20 @@
 					<table class="table table-sm table-borderless mb-0">
 						<tbody>
 						<tr>
-							<th class="pl-0 w-25" scope="row"><strong>Model</strong></th>
-							<td>Shirt 5407X</td>
+							<th class="pl-0 w-25" scope="row"><strong>Delivery cost</strong></th>
+							<td>{{ deal.delivery_cost }}</td>
 						</tr>
 						<tr>
-							<th class="pl-0 w-25" scope="row"><strong>Color</strong></th>
-							<td>Black</td>
-						</tr>
-						<tr>
-							<th class="pl-0 w-25" scope="row"><strong>Delivery</strong></th>
-							<td>USA, Europe</td>
+							<th class="pl-0 w-25" scope="row"><strong>Valid</strong></th>
+{#							Add custom filter and return 0 when expired#}
+							<td>{{ deal.valid_till | timeuntil }}</td>
 						</tr>
 						</tbody>
 					</table>
 				</div>
 				<hr>
 
-				<button type="button" class="btn btn-primary btn-md mr-1 mb-2">Buy now</button>
-				<button type="button" class="btn btn-light btn-md mr-1 mb-2">
-					<i class="fas fa-shopping-cart pr-2"></i>Add to cart
-				</button>
+				<a type="button" class="btn btn-primary btn-md mr-1 mb-2" href="{{ deal.link }}">Buy now</a>
 			</div>
 		</div>
 
