Minor adjustements in view

--- a/templates/deals/deal_detail.html
+++ b/templates/deals/deal_detail.html
@@ -6,14 +6,14 @@
 	<!--Section: Block Content-->
 	<section class="mb-5">
 		<div class="row">
-			<div class="col-md-6 mb-4 mb-md-0">
+			<div class="col-md-4 mb-2 mb-md-0">
 				<div id="mdb-lightbox-ui"></div>
 				<div class="mdb-lightbox">
 					<div class="row product-gallery mx-1">
 						<div class="col-12 mb-0">
 							<figure class="view overlay rounded z-depth-1 main-img">
 								<a href="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15a.jpg"
-								   data-size="710x823">
+								   data-size="400x400">
 									<img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15a.jpg"
 									     class="img-fluid z-depth-1">
 								</a>
@@ -24,9 +24,9 @@
 				</div>
 
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-8">
 				<h5>{{ deal.name }}</h5>
-				<p class="mb-2 text-muted text-uppercase small">Category</p>
+				<p class="mb-2 text-muted text-uppercase small">Category | {{ deal.author }}</p>
 				<p>
 					<span class="mr-1">
 						<strong>{{ deal.current_price }}
