Add "New Deal" button on navbar.html

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,4 +12,11 @@
 			</li>
 		</ul>
 	</div>
+
+	<ul class="form-inline navbar-nav mr-auto">
+			<li class="nav-item active">
+				<a class="nav-link" href="{% url 'deals:new' %}">New Deal</a>
+			</li>
+
+	</ul>
 </nav>
