--- a/templates/deals/deal_list.html
+++ b/templates/deals/deal_list.html
@@ -1,9 +1,40 @@
 {% extends '_base.html' %}
 {% block title %} Deals list {% endblock %}
 {% block content %}
+	<div class="container mt-5">
+		<div class="row">
+			<div class="col-sm-10">
+				{% for deal in deals %}
+					{% include "deals/deal_card.html" %}
+				{% endfor %}
 
-	{% for deal in deals %}
-		{% include "deals/deal_card.html" %}
-	{% endfor %}
+				<div class="pagination">
+				    <span class="step-links">
+				        {% if page_obj.has_previous %}
+					        <a href="?page=1">&laquo; first</a>
+					        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+				        {% endif %}
+
+					    <span class="current">
+				            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+				        </span>
+
+					    {% if page_obj.has_next %}
+						    <a href="?page={{ page_obj.next_page_number }}">next</a>
+						    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+					    {% endif %}
+				    </span>
+				</div>
+			</div>
+
+			<div class="col-sm-2">
+				right panel
+			</div>
+
+		</div>
+
+	</div>
+
+
 
 {% endblock %}
