Add commenting func inside deal detail

--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -1,4 +1,6 @@
-<div class="container mt-5">
+{% include 'deals/comment_create.html' with form=form %}
+
+<div class="container mt-5 mb-4">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="headings d-flex justify-content-between align-items-center mb-3">
