--- a/templates/deals/deal_detail.html
+++ b/templates/deals/deal_detail.html
@@ -2,7 +2,6 @@
 {% block title %} Deal detail {% endblock %}
 {% block content %}
 
-
 	<!--Section: Block Content-->
 	<section class="mb-5">
 		<div class="row">
@@ -24,6 +23,33 @@
 			</div>
 			<div class="col-md-8">
 				<h5>{{ deal.name }}</h5>
+				<p>
+
+
+					<span id="container-vote-up">
+					<span id="deal_id" data-value="{{ deal.id }}"></span>
+
+					<a class="btn btn-link text-dark vote-action" href="" value="vote_up">
+						<svg id="vote_up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+						     class="bi bi-file-plus text-success " viewBox="0 0 16 16">
+							<path d="M8.5 6a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5V6z"></path>
+							<path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"></path>
+						</svg>
+					</a>
+					</span>
+				<span id="voting-counter">{{ deal.get_voting_count }}</span>
+				<span id="container-vote-down">
+
+						<a class="btn btn-link text-dark vote-action" href="#" value="vote_down">
+							<svg id="vote_down" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+							     fill="currentColor"
+							     class="bi bi-file-minus text-danger" viewBox="0 0 16 16">
+								<path d="M5.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"></path>
+								<path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"></path>
+							</svg>
+						</a>
+					</span>
+				</p>
 				<p class="mb-2 text-muted text-uppercase small">Category | {{ deal.author }}</p>
 				<p>
 					<span class="mr-1">
@@ -57,6 +83,49 @@
 
 	</section>
 	<!--Section: Block Content-->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+	        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	        crossorigin="anonymous"></script>
+	<script>
 
+        function remove_vote_button(button_value) {
+            if (button_value === "vote_down") {
+                return "container-vote-up"
+            } else if (button_value === "vote_up") {
+                return "container-vote-down"
+            }
+
+        }
+
+        $(document).ready(function () {
+            $('.vote-action').click(function (e) {
+                e.preventDefault();
+                let deal_id = document.getElementById('deal_id').getAttribute('data-value');
+                let button = $(this).attr("value");
+                $.ajax({
+                    type: 'POST',
+                    url: '{% url "deals:votes" %}',
+                    data: {
+                        deal_id: deal_id,
+                        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                        action: 'votes',
+                        button: button,
+                    },
+                    success: function (json) {
+                        if (json.length < 1 || json == undefined) {
+                        }
+
+                        document.getElementById("voting-counter").innerHTML = json['total']
+
+                        console.log(json)
+
+                    },
+                    error: function (xhr, errmsg, err) {
+                    }
+                });
+            });
+        });
+
+	</script>
 	{% include 'deals/comments.html' %}
 {% endblock %}
