--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,16 +7,18 @@
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-{#				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'deals:list' %}?last_days=7&min_votes=50">HOT</a>
 			</li>
 		</ul>
-	</div>
 
+
+	</div>
 	<ul class="form-inline navbar-nav mr-auto">
-			<li class="nav-item active">
-				<a class="nav-link" href="{% url 'deals:new' %}">New Deal</a>
-			</li>
+		<li class="nav-item">
+			<a class="nav-link" href="{% url 'deals:new' %}">New Deal</a>
+		</li>
 
 	</ul>
+
 </nav>
