--- a/templates/deals/deal_card.html
+++ b/templates/deals/deal_card.html
@@ -2,7 +2,7 @@
 	<div class="card mb-2">
 		<div class="row no-gutters">
 			<div class="col-sm-2 p-2">
-				<img class="card-img" src="{{ deal.product_img}}">
+				<img class="card-img" src="{{ deal.product_img }}">
 			</div>
 			<div class="col-sm-10">
 				<div class="card-body">
@@ -12,9 +12,11 @@
 							{% if deal.historical_price %}| <s> {{ deal.historical_price }}</s> |
 								{{ deal.price_percentage | floatformat:2 }}%  {% endif %}
 						</a>
+						<p><span class="badge badge-info">{{ deal.get_voting_count }}</span></p>
 					</h5>
-					<p class="card-text">{{ deal.description | truncatewords:20  }}</p>
-					<p><small>{{ deal.created_at }} | Comments: {{ deal.comment_set.count }} | Author: {{ deal.author }}</small></p>
+					<p class="card-text">{{ deal.description | truncatewords:20 }}</p>
+					<p><small>{{ deal.created_at }} | Comments: {{ deal.comment_set.count }} |
+						Author: {{ deal.author }}</small></p>
 				</div>
 			</div>
 		</div>
