--- a/templates/deals/deal_detail.html
+++ b/templates/deals/deal_detail.html
@@ -2,7 +2,6 @@
 {% block title %} Deal detail {% endblock %}
 {% block content %}
 
-
 	<!--Section: Block Content-->
 	<section class="mb-5">
 		<div class="row">
@@ -35,25 +34,25 @@
 				</p>
 				<p>
 
-
+					<span id="deal_id" data-value="{{ deal.id }}" {% if have_voted %} data-toggle="tooltip"
+					      title="You can vote only once." {% endif %}>
 					<span id="container-vote-up">
-					<span id="deal_id" data-value="{{ deal.id }}"></span>
 
-					<a class="vote-action" href="#" value="vote_up">
-
-						<button type="button" class="btn btn-outline-success">
-								<i class="bi bi-file-plus" fill="currentColor" width="20" height="20"></i>
-                            </button>
-
-					</a>
-					</span>
-					<span id="voting-counter p-2">{{ deal.get_voting_count }}</span>
-					<span id="container-vote-down">
-						<a class="vote-action" href="#" value="vote_down">
-							<button type="button" class="btn btn-outline-danger">
-								<i class="bi bi-file-minus" fill="currentColor"></i>
-                            </button>
+						<a class="vote-action btn btn-outline-success {% if have_voted %}disabled {% endif %}" href="#"
+						   role="button" value="vote_up" id="vote_up">
+							<i class="bi bi-file-plus" fill="currentColor" width="20" height="20"></i>
 						</a>
+
+					</span>
+
+					<span id="voting-counter" class="p-2">{{ deal.get_voting_count }}</span>
+
+					<span id="container-vote-down">
+						<a class="vote-action btn btn-outline-danger {% if have_voted %}disabled {% endif %}" href="#"
+						   role="button" value="vote_down" id="vote_down">
+							<i class="bi bi-file-minus" fill="currentColor" width="20" height="20"></i>
+						</a>
+					</span>
 					</span>
 				</p>
 
@@ -80,7 +79,6 @@
 		</div>
 
 	</section>
-	<!--Section: Block Content-->
 
 	{% include 'deals/comments.html' %}
 	<script>
@@ -90,31 +88,30 @@
                 e.preventDefault();
                 let deal_id = document.getElementById('deal_id').getAttribute('data-value');
                 let button = $(this).attr("value");
-                {% if not have_voted %}
-                    $.ajax({
-                        type: 'POST',
-                        url: '{% url "deals:vote" %}',
-                        data: {
-                            deal_id: deal_id,
-                            csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
-                            action: 'votes',
-                            button: button,
-                        },
-                        success: function (json) {
-                            if (json.length < 1 || json == undefined) {
-                            }
 
-                            document.getElementById("voting-counter").innerHTML = json['total']
-
-                            console.log(json)
-
-                        },
-                        error: function (xhr, errmsg, err) {
+                $.ajax({
+                    type: 'POST',
+                    url: '{% url "deals:vote" %}',
+                    data: {
+                        deal_id: deal_id,
+                        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                        action: 'votes',
+                        button: button,
+                    },
+                    success: function (json) {
+                        if (json.length < 1 || json == undefined) {
                         }
-                    });
-                {% endif %}
+                        $('.toast').toast('show');
+                        document.getElementById("vote_down").classList.add("disabled")
+                        document.getElementById("vote_up").classList.add("disabled")
+                        document.getElementById("voting-counter").innerHTML = json['total']
 
+                        console.log(json)
 
+                    },
+                    error: function (xhr, errmsg, err) {
+                    }
+                });
             });
         });
 
