--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="{% url 'deals:list' %}?last_days=7&min_votes=50">HOT</a>
+				<a class="nav-link" href="{% url 'deals:hot_list' %}">HOT</a>
 			</li>
 		</ul>
 
