--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -12,9 +12,13 @@
 				<div class="card p-3 mt-2">
 					<div class="d-flex justify-content-between align-items-center">
 						<div class="user d-flex flex-row align-items-center">
-							<img src="https://i.pravatar.cc/30" width="30" class="user-img rounded-circle mr-2">
+							<a href="{% url 'accounts:profile' comment.author.pk %}">
+								<img src="{{ comment.author.avatar }}" width="30" class="user-img rounded-circle mr-2">
+							</a>
 							<span>
-								<small class="font-weight-bold text-primary">{{ comment.author }}</small>
+								<small class="font-weight-bold text-primary">
+									<a href="{% url 'accounts:profile' comment.author.pk %}"> {{ comment.author }}</a>
+								</small>
 
 								<small>{{ comment.created_at | timesince }} ago</small>
 							</span>
