SonarLint analysis fixes

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -12,7 +12,7 @@
 				<small>{{ form.email.errors }}</small>
 				<div class="form-group input-group">
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-envelope"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-envelope" aria-hidden="true"></i> </span>
 					</div>
 					<small>{{ form.email.errors }}</small>
 					<input name="{{ form.email.html_name }}" class="form-control"
