--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -15,7 +15,7 @@
 				<div class="form-group input-group">
 
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-person"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-person" aria-hidden="true"></i> </span>
 
 					</div>
 
@@ -27,7 +27,7 @@
 				<small>{{ form.email.errors }}</small>
 				<div class="form-group input-group">
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-envelope"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-envelope" aria-hidden="true"></i> </span>
 					</div>
 					<small>{{ form.email.errors }}</small>
 					<input name="{{ form.email.html_name }}" class="form-control"
@@ -37,7 +37,7 @@
 				<small>{{ form.password1.errors }}</small>
 				<div class="form-group input-group">
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-lock"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-lock" aria-hidden="true"></i> </span>
 					</div>
 					<small>{{ form.password1.errors }}</small>
 					<input name="{{ form.password1.html_name }}" class="form-control" placeholder="Create password"
@@ -47,7 +47,7 @@
 				<small>{{ form.password2.errors }}</small>
 				<div class="form-group input-group">
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-lock"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-lock" aria-hidden="true"></i> </span>
 					</div>
 					<small>{{ form.password2.errors }}</small>
 					<input name="{{ form.password2.html_name }}" class="form-control" placeholder="Repeat password"
