--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -11,7 +11,7 @@
 				<div class="form-group input-group">
 
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-person"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-person" aria-hidden="true"></i> </span>
 					</div>
 
 					<input name="{{ form.login.html_name }}" class="form-control"
@@ -22,7 +22,7 @@
 				<small>{{ form.password1.errors }}</small>
 				<div class="form-group input-group">
 					<div class="input-group-prepend">
-						<span class="input-group-text"> <i class="bi bi-lock"></i> </span>
+						<span class="input-group-text"> <i class="bi bi-lock" aria-hidden="true"></i> </span>
 					</div>
 					<small>{{ form.password.errors }}</small>
 					<input name="{{ form.password.html_name }}" class="form-control"
