--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -13,7 +13,7 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<div class="user d-flex flex-row align-items-center">
 							<a href="{% url 'accounts:profile' comment.author.pk %}">
-								<img src="{{ comment.author.avatar }}" width="30" class="user-img rounded-circle mr-2">
+								<img src="{{ comment.author.avatar }}" width="30" class="user-img rounded-circle mr-2" alt="User avatar">
 							</a>
 							<span>
 								<small class="font-weight-bold text-primary">
