--- a/templates/deals/deal_card.html
+++ b/templates/deals/deal_card.html
@@ -2,7 +2,7 @@
 	<div class="card mb-2">
 		<div class="row no-gutters">
 			<div class="col-sm-2 p-2">
-				<img class="card-img" src="{{ deal.product_img }}">
+				<img class="card-img" src="{{ deal.product_img }}" alt="Deal image">
 			</div>
 			<div class="col-sm-10">
 				<div class="card-body">
