--- a/templates/deals/comment_create.html
+++ b/templates/deals/comment_create.html
@@ -1,4 +1,5 @@
 {% block content %}
+	{% if user.is_authenticated %}
 	<form method="post">
 		{% csrf_token %}
 
@@ -13,7 +14,7 @@
 			<button class="btn btn-primary" type="submit">Comment</button>
 		</div>
 	</form>
-
+	{% endif %}
 
 {% endblock content %}
 
