--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,11 @@
 
 	</div>
 
+	<form class="form-inline my-2 my-lg-0 mr-5" action="{% url 'deals:list' %}">
+		<input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
+		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	</form>
+
 	<ul class="form-inline navbar-nav mr-auto">
 		<li class="nav-item mr-2">
 			<a class="btn btn-warning" href="{% url 'deals:new' %}">New Deal</a>
