--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,45 +7,45 @@
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
+			<li class="nav-item active">
 				<a class="nav-link" href="{% url 'deals:hot_list' %}">HOT</a>
 			</li>
 		</ul>
+		<form class="form-inline my-2 my-lg-0 mr-2" action="{% url 'deals:list' %}">
+			<input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+				<i class="bi bi-search" aria-hidden="true"></i>
+			</button>
 
-	</div>
+		</form>
 
-	<form class="form-inline my-2 my-lg-0 mr-5" action="{% url 'deals:list' %}">
-		<input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
-		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-	</form>
-
-	<ul class="form-inline navbar-nav mr-auto">
-		<li class="nav-item mr-2">
-			<a class="btn btn-warning" href="{% url 'deals:new' %}">New Deal</a>
-		</li>
-		{% if user.is_authenticated %}
-			<div class="circle dropleft">
-				<span class="initials" role="button" data-toggle="dropdown" aria-haspopup="true"
-				      aria-expanded="false">{{ user.get_initials }}</span>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="{% url 'accounts:profile' %}">{{ user.username }}</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="{% url 'deals:user_deals' user.pk %}">Published</a>
-					<a class="dropdown-item" href="#">Saved</a>
-					<a class="dropdown-item" href="#">Alerts</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
-				</div>
-			</div>
-
-
-		{% else %}
+		<ul class="form-inline my-2 my-lg-0 navbar-nav">
 			<li class="nav-item mr-2">
-				<a class="btn btn-secondary " href="{% url 'account_login' %}">Login / Register</a>
-
+				<a class="btn btn-warning" href="{% url 'deals:new' %}">New Deal</a>
 			</li>
-		{% endif %}
+			{% if user.is_authenticated %}
+				<div class="circle dropleft">
+					<span class="initials" role="button" data-toggle="dropdown" aria-haspopup="true"
+					      aria-expanded="false">{{ user.get_initials }}</span>
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+						<a class="dropdown-item" href="{% url 'accounts:profile' %}">{{ user.username }}</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="{% url 'deals:user_deals' user.pk %}">Published</a>
+						<a class="dropdown-item" href="#">Saved</a>
+						<a class="dropdown-item" href="#">Alerts</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
+					</div>
+				</div>
 
-	</ul>
 
+			{% else %}
+				<li class="nav-item mr-2">
+					<a class="btn btn-secondary " href="{% url 'account_login' %}">Login / Register</a>
+
+				</li>
+			{% endif %}
+
+		</ul>
+	</div>
 </nav>
