--- a/templates/deals/deal_create.html
+++ b/templates/deals/deal_create.html
@@ -1,11 +1,47 @@
 {% extends "_base.html" %}
 {% load bootstrap4 %}
-
+{% block title %} Dodaj nową okazję {% endblock %}
 {% block content %}
-<form method="post">{% csrf_token %}
-	{% bootstrap_form form %}
-	{% buttons %}
-		<button type="submit" class="btn btn-primary">Submit</button>
-	{% endbuttons %}
-</form>
+
+<div class="card bg-light">
+	<article class="card-body mx-auto" style="max-width: 800px;">
+		<h4 class="card-title mt-3 text-center">Dodaj nową okazję</h4>
+		<form class="create_deal" method="POST">
+			{% csrf_token %}
+			<!-- 2 column grid layout with text inputs for the first and last names -->
+			<div class="row mb-4">
+				<div class="col">
+					<div class="form-outline">
+						<input type="text" id="form3Example1"  name="{{ form.name.html_name }}" class="form-control" />
+						<label class="form-label" for="form3Example1">Tytuł</label>
+					</div>
+				</div>
+				<div class="col">
+					<div class="form-outline">
+						<input type="text" id="form3Example2" class="form-control" />
+						<label class="form-label" for="form3Example2">Last name</label>
+					</div>
+				</div>
+			</div>
+
+			<!-- Email input -->
+			<div class="form-outline mb-4">
+				<input type="email" id="form3Example3" class="form-control" />
+				<label class="form-label" for="form3Example3">Email address</label>
+			</div>
+
+			<!-- Password input -->
+			<div class="form-outline mb-4">
+				<input type="password" id="form3Example4" class="form-control" />
+				<label class="form-label" for="form3Example4">Password</label>
+			</div>
+
+
+			<!-- Submit button -->
+			<button type="submit" class="btn btn-success btn-block mb-4">Dodaj</button>
+
+		</form>
+	</article>
+</div>
+
 {% endblock content %}
