Quill editor has been added

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -30,6 +30,8 @@
             top: calc(var(--avatar-size) / 4); /* 25% of parent */
         }
 	</style>
+	<!-- django-quill-editor Media -->
+	{% include 'django_quill/media.html' %}
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
