--- a/templates/deals/deal_create.html
+++ b/templates/deals/deal_create.html
@@ -1,47 +1,72 @@
+
 {% extends "_base.html" %}
-{% load bootstrap4 %}
+{% debug %}
+
 {% block title %} Dodaj nową okazję {% endblock %}
 {% block content %}
 
-<div class="card bg-light">
-	<article class="card-body mx-auto" style="max-width: 800px;">
-		<h4 class="card-title mt-3 text-center">Dodaj nową okazję</h4>
-		<form class="create_deal" method="POST">
-			{% csrf_token %}
-			<!-- 2 column grid layout with text inputs for the first and last names -->
-			<div class="row mb-4">
-				<div class="col">
-					<div class="form-outline">
-						<input type="text" id="form3Example1"  name="{{ form.name.html_name }}" class="form-control" />
-						<label class="form-label" for="form3Example1">Tytuł</label>
+	<div class="card bg-light">
+		<article class="card-body mx-auto" style="max-width: 800px;">
+			<h4 class="card-title mt-3 text-center">Dodaj nową okazję</h4>
+			<form class="create_deal" method="POST">
+				{% csrf_token %}
+				{{ form.errors }}
+				<!-- 2 column grid layout with text inputs for the first and last names -->
+				<div class="row mb-4">
+					<div class="col">
+						<div class="form-outline">
+							<input type="text" id="form3Example1" name="{{ form.name.html_name }}"
+							       class="form-control"/>
+							<label class="form-label" for="form3Example1">Tytuł</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-outline">
+							<input type="text" id="form3Example2" class="form-control"/>
+							<label class="form-label" for="form3Example2">Last name</label>
+						</div>
 					</div>
 				</div>
-				<div class="col">
-					<div class="form-outline">
-						<input type="text" id="form3Example2" class="form-control" />
-						<label class="form-label" for="form3Example2">Last name</label>
+
+				<div class="form-outline mb-4" style="background-color: white">
+					{{ form.description }}
+				</div>
+
+				<!-- Email input -->
+				<div class="form-outline mb-4">
+					<input type="text" id="form3Example1" name="{{ form.link.html_name }}" class="form-control" {{ form.link.required }}/>
+					<label class="form-label" for="form3Example1">Link</label>
+				</div>
+
+				<div class="row mb-4">
+					<div class="col">
+						<div class="form-outline">
+							<input type="text" id="form3Example1" name="{{ form.current_price.html_name }}"
+							       class="form-control"/>
+							<label class="form-label" for="form3Example1">Aktualna cena</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-outline">
+							<input type="text" id="form3Example1" name="{{ form.historical_price.html_name }}"
+							       class="form-control"/>
+							<label class="form-label" for="form3Example1">Poprzednia cena</label>
+						</div>
 					</div>
 				</div>
-			</div>
+				<div class="form-outline mb-4">
+					<input type="text" id="form3Example1" name="{{ form.delivery_cost.html_name }}" class="form-control"/>
+					<label class="form-label" for="form3Example1">Link</label>
+					<p>zzz {{ form.delivery_cost.items }} yyy</p>
+					{% for i in form.delivery_cost.items %}
+					<p>.. {{ i }} ..</p>
+					{% endfor %}
+				</div>
+				<!-- Submit button -->
+				<button type="submit" class="btn btn-success btn-block mb-4">Dodaj</button>
 
-			<!-- Email input -->
-			<div class="form-outline mb-4">
-				<input type="email" id="form3Example3" class="form-control" />
-				<label class="form-label" for="form3Example3">Email address</label>
-			</div>
-
-			<!-- Password input -->
-			<div class="form-outline mb-4">
-				<input type="password" id="form3Example4" class="form-control" />
-				<label class="form-label" for="form3Example4">Password</label>
-			</div>
-
-
-			<!-- Submit button -->
-			<button type="submit" class="btn btn-success btn-block mb-4">Dodaj</button>
-
-		</form>
-	</article>
-</div>
+			</form>
+		</article>
+	</div>
 
 {% endblock content %}
