--- a/templates/deals/deal_detail.html
+++ b/templates/deals/deal_detail.html
@@ -11,8 +11,9 @@
 					<div class="row product-gallery mx-1">
 						<div class="col-12 mb-0">
 							<figure class="view overlay rounded z-depth-1 main-img">
-								<a href="{{ deal.product_img }}" data-size="400x400">
-									<img src="{{ deal.product_img }}" class="img-fluid z-depth-1" alt="Product photo">
+								<a href="{{ deal.product_img.url }}" data-size="400x400">
+									<img src="{{ deal.product_img.url }}" class="img-fluid z-depth-1"
+									     alt="Product photo">
 								</a>
 							</figure>
 						</div>
