--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,6 +15,12 @@
             /* change this value anything, e.g., 100px, 10rem, etc. */
         }
 
+        .circle-avatar {
+            height: var(--avatar-size);
+            text-align: center;
+            width: var(--avatar-size);
+        }
+
         .circle {
             background-color: #ccc;
             border-radius: 50%;
