--- a/templates/deals/comment_create.html
+++ b/templates/deals/comment_create.html
@@ -1,19 +1,29 @@
 {% block content %}
 	{% if user.is_authenticated %}
-	<form method="post">
-		{% csrf_token %}
+		<form method="post">
+			{% csrf_token %}
 
-		<div class="d-flex flex-row add-comment-section mt-4 mb-4">
-			<a href="{% url 'accounts:profile' user.pk %}">
-				<img class="img-fluid img-responsive rounded-circle mr-3" src="{{ user.avatar }}" width="38 px"
-				     alt="{{ user.username }} avatar">
-			</a>
+			<div class="d-flex flex-row add-comment-section mt-4 mb-4">
+				<a href="{% url 'accounts:profile' user.pk %}">
+					{% if user.avatar %}
+						<img class="rounded-circle z-depth-2 circle-avatar mr-2" alt="{{ user.username }} avatar"
+						     src="{{ user.avatar.url }}" data-holder-rendered="true" style="width:38px; height:38px">
 
-			{{ form.comment }}
+					{% else %}
+						<div class="circle rounded-circle z-depth-2 circle-avatar mr-2" style="width:38px; height:38px">
+						<span class="initials" role="button" data-toggle="dropdown" aria-haspopup="true"
+						      aria-expanded="false">{{ user.get_initials }}</span>
 
-			<button class="btn btn-primary" type="submit">Comment</button>
-		</div>
-	</form>
+						</div>
+					{% endif %}
+
+				</a>
+
+				{{ form.comment }}
+
+				<button class="btn btn-primary" type="submit">Comment</button>
+			</div>
+		</form>
 	{% endif %}
 
 {% endblock content %}
