--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -13,7 +13,18 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<div class="user d-flex flex-row align-items-center">
 							<a href="{% url 'accounts:profile' comment.author.pk %}">
-								<img src="{{ comment.author.avatar }}" width="30" class="user-img rounded-circle mr-2" alt="User avatar">
+								{% if comment.author.avatar %}
+									<img src="{{ comment.author.avatar.url }}"
+									     class="user-img rounded-circle z-depth-2 circle-avatar mr-2" alt="User avatar"
+									     style="width:38px; height:38px">
+								{% else %}
+									<div class="circle rounded-circle z-depth-2 circle-avatar mr-2"
+									     style="width:38px; height:38px">
+						<span class="initials" role="button" data-toggle="dropdown" aria-haspopup="true"
+						      aria-expanded="false">{{ comment.author.get_initials }}</span>
+
+									</div>
+								{% endif %}
 							</a>
 							<span>
 								<small class="font-weight-bold text-primary">
