--- a/templates/deals/deal_card.html
+++ b/templates/deals/deal_card.html
@@ -2,7 +2,7 @@
 	<div class="card mb-2">
 		<div class="row no-gutters">
 			<div class="col-sm-2 p-2">
-				<img class="card-img" src="{{ deal.product_img }}" alt="Deal image">
+				<img class="card-img" src="{{ deal.product_img.url }}" alt="Deal image">
 			</div>
 			<div class="col-sm-10">
 				<div class="card-body">
@@ -14,7 +14,7 @@
 						</a>
 						<p><span class="badge badge-info">{{ deal.get_voting_count }}</span></p>
 					</h5>
-					<p class="card-text">{{ deal.description | truncatewords:20 }}</p>
+					<p class="card-text">{{ deal.description.html | striptags  | truncatewords:20 }}</p>
 					<p><small>{{ deal.created_at }} | Comments: {{ deal.comment_set.count }} |
 						Author: {{ deal.author }}</small></p>
 				</div>
