Adjustements after replecing ID with UUID for CustomUser model

--- a/templates/account/profile_detail.html
+++ b/templates/account/profile_detail.html
@@ -6,7 +6,8 @@
 
 	<div class="card bg-light">
 		<div class="media">
-			<img src="{{ profile.avatar }}" class="align-self-start align mr-3" alt="..." style="max-height: 200px">
+			<img src="{{ profile.avatar.url }}" class="align-self-md-center align mr-3 ml-3" alt="..."
+			     style="max-height: 200px">
 			<div class="media-body">
 				<h1 class="mt-0 text-center">{{ profile.username }}</h1>
 
