--- a/templates/deals/comment_create.html
+++ b/templates/deals/comment_create.html
@@ -4,7 +4,7 @@
 			{% csrf_token %}
 
 			<div class="d-flex flex-row add-comment-section mt-4 mb-4">
-				<a href="{% url 'accounts:profile' user.pk %}">
+				<a href="{% url 'accounts:profile' user.username %}">
 					{% if user.avatar %}
 						<img class="rounded-circle z-depth-2 circle-avatar mr-2" alt="{{ user.username }} avatar"
 						     src="{{ user.avatar.url }}" data-holder-rendered="true" style="width:38px; height:38px">
