--- a/templates/account/profile_detail.html
+++ b/templates/account/profile_detail.html
@@ -6,10 +6,14 @@
 
 	<div class="card bg-light">
 		<div class="media">
-			<img src="{{ profile.avatar.url }}" class="align-self-md-center align mr-3 ml-3" alt="..."
-			     style="max-height: 200px">
-			<div class="media-body">
-				<h1 class="mt-0 text-center">{{ profile.username }}</h1>
+			{% if profile.avatar %}
+
+				<img src="{{ profile.avatar.url }}" class="align-self-md-center align mr-3 ml-3" alt="..."
+				     style="max-height: 200px">
+			{% endif %}
+
+			<div class="media-body ml-2">
+				<h1 class="mt-0 text-center">{{ profile.username|lower|title }}</h1>
 
 				<dl class="row">
 					<dt class="col-sm-2">Name</dt>
