--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,6 +10,12 @@
 			<li class="nav-item active">
 				<a class="nav-link" href="{% url 'deals:hot_list' %}">HOT</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'products:brands' %}">Marki</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'products:products' %}">Produkty</a>
+			</li>
 		</ul>
 		<form class="form-inline my-2 my-lg-0 mr-2" action="{% url 'deals:list' %}">
 			<input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
