--- a/templates/deals/comments.html
+++ b/templates/deals/comments.html
@@ -4,10 +4,10 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="headings d-flex justify-content-between align-items-center mb-3">
-				<h5>Comments ({{ comments.count }}):</h5>
+				<h5>Comments ({{ deal.comment_set.count }}):</h5>
 
 			</div>
-
+			{#			{% for comment in deal.comment_set.all %}#}
 			{% for comment in comments %}
 				<div class="card p-3 mt-2">
 					<div class="d-flex justify-content-between align-items-center">
@@ -46,6 +46,24 @@
 				</div>
 
 			{% endfor %}
+
+			<div class="pagination">
+    <span class="step-links">
+        {% if comments.has_previous %}
+	        <a href="?page=1">&laquo; first</a>
+	        <a href="?page={{ comments.previous_page_number }}">previous</a>
+        {% endif %}
+
+	    <span class="current">
+            Page {{ comments.number }} of {{ comments.paginator.num_pages }}.
+        </span>
+
+	    {% if comments.has_next %}
+		    <a href="?page={{ comments.next_page_number }}">next</a>
+		    <a href="?page={{ comments.paginator.num_pages }}">last &raquo;</a>
+	    {% endif %}
+    </span>
+			</div>
 
 
 		</div>
