--- a/templates/deals/deal_card.html
+++ b/templates/deals/deal_card.html
@@ -14,7 +14,7 @@
 						</a>
 						<p><span class="badge badge-info">{{ deal.get_voting_count }}</span></p>
 					</h5>
-					<p class="card-text">{{ deal.description.html | striptags  | truncatewords:20 }}</p>
+					<p class="card-text">{{ deal.description | safe | striptags | truncatechars:100 }}</p>
 					<p><small>{{ deal.created_at }} | Comments: {{ deal.comment_set.count }} |
 						Author: {{ deal.author }}</small></p>
 				</div>
